[#168519088] Removed spring music pre compiled file and pointed to spring music documentation.